--- a/index.html
+++ b/index.html
@@ -463,16 +463,16 @@
         </footer>
     </main>
 
-    <div class="sticky-footer py-3 px-6 md:px-12 flex justify-between items-center">
+    <!-- === STICKY FOOTER LAYOUT UPDATED HERE === -->
+    <div class="sticky-footer py-3 px-6 flex justify-center sm:justify-between items-center">
         <p class="text-lg md:text-xl font-bold text-gray-800 hidden sm:block">
             Book Your Appointment Today!
         </p>
-        <div class="text-right">
+        <div class="flex flex-col items-center">
              <span class="text-sm font-semibold text-blue-600 block">AVAILABLE 24/7</span>
-            <!-- === STICKY BUTTON TEXT UPDATED HERE === -->
             <a href="tel:+14052955189" class="btn-call-to-action mt-1">
                 <svg class="w-6 h-6 mr-3" fill="currentColor" viewBox="0 0 20 20"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg>
-                <span>Call Now</span>
+                <span>Call Now to Book</span>
                 <span class="call-tracking-number visually-hidden">(405) 295-5189</span>
             </a>
         </div>
