--- a/bnpl.html
+++ b/bnpl.html
@@ -126,8 +126,8 @@
             <hr class="border-gray-200 my-10">
 
             <div class="text-center">
-                 <h2 class="text-2xl font-bold text-gray-900 mb-4 flex items-center justify-center"><i class="fas fa-rocket text-blue-400 mr-3"></i>Lock In Your Plan</h2>
-                 <p class="text-gray-700 mb-6">Ready to detail? Call us now to lock in your financing and schedule your Level 2 Detail!</p>
+                 <h2 class="text-2xl font-bold text-gray-900 mb-4 flex items-center justify-center"><i class="fas fa-rocket text-blue-400 mr-3"></i>secure Your Plan</h2>
+                 <p class="text-gray-700 mb-6">Ready to detail? Call us now to secure your financing and schedule your Level 2 Detail!</p>
                  <a href="tel:4052955189" onclick="return gtag_report_conversion('tel:4052955189');" class="btn-primary inline-flex items-center">
                     <i class="fas fa-phone-alt mr-3"></i> Call 405-295-5189
                  </a>
@@ -171,7 +171,7 @@
 
         <div class="text-center">
              <h2 class="text-3xl font-bold text-gray-900 mb-4">Ready for a Showroom Finish?</h2>
-             <p class="text-gray-700 mb-6">Don't wait. Call today to lock in your financing and schedule your appointment!</p>
+             <p class="text-gray-700 mb-6">Don't wait. Call today to secure your financing and schedule your appointment!</p>
              <a href="tel:4052955189" onclick="return gtag_report_conversion('tel:4052955189');" class="btn-primary inline-flex items-center text-lg">
                 <i class="fas fa-phone-alt mr-3"></i> Call 405-295-5189
              </a>
