--- a/bnpl.html
+++ b/bnpl.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pay in 3 payments - Michie Auto Detailing</title>
+    <title>Pay in 3 installments - Michie Auto Detailing</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -111,7 +111,7 @@
         <div class="card p-6 sm:p-8 lg:p-10 mb-10">
             
             <div>
-                 <h2 class="text-2xl font-bold text-gray-900 mb-6 flex items-center"><i class="fas fa-receipt text-green-400 mr-3"></i>Your Special Financing Plan</h2>
+                 <h2 class="text-2xl font-bold text-gray-900 mb-6 flex items-center"><i class="fas fa-receipt text-green-400 mr-3"></i>Your Special Payment Plan</h2>
                 
                  <div id="summary" class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
                     </div>
@@ -126,7 +126,7 @@
             <hr class="border-gray-200 my-10">
 
             <div class="text-center">
-                 <h2 class="text-2xl font-bold text-gray-900 mb-4 flex items-center justify-center"><i class="fas fa-rocket text-blue-400 mr-3"></i>secure Your Plan</h2>
+                 <h2 class="text-2xl font-bold text-gray-900 mb-4 flex items-center justify-center"><i class="fas fa-rocket text-blue-400 mr-3"></i>Secure Your Plan</h2>
                  <p class="text-gray-700 mb-6">Ready to detail? Call us now to secure your financing and schedule your Level 2 Detail!</p>
                  <a href="tel:4052955189" onclick="return gtag_report_conversion('tel:4052955189');" class="btn-primary inline-flex items-center">
                     <i class="fas fa-phone-alt mr-3"></i> Call 405-295-5189
