--- a/bnpl.html
+++ b/bnpl.html
@@ -104,7 +104,7 @@
 
     <div class="relative z-10 w-full max-w-4xl mx-auto">
         <header class="text-center mb-8">
-            <h1 class="text-4xl md:text-5xl font-extrabold text-gray-900 tracking-tight">Level 2 Detail Financing</h1>
+            <h1 class="text-4xl md:text-5xl font-extrabold text-gray-900 tracking-tight">Detail Financing Equality</h1>
             <p class="mt-3 text-lg text-gray-600 max-w-3xl mx-auto">For a limited time, get our most popular package with 0% interest. Just 3 easy payments of $99.</p>
         </header>
 
