--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
         <section id="pricing" class="section-padding bg-gray-100">
             <div class="container mx-auto text-center">
-                <h3 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Our Detailing Packages</h3>
+                <h3 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Mobile Detailing Packages</h3>
                 <p class="text-lg text-gray-600 mb-10 max-w-2xl mx-auto">Choose your vehicle type to view tailored pricing. No hidden fees, just premium results.</p>
 
                 <div class="vehicle-toggle">
