--- a/customer_portal.html
+++ b/customer_portal.html
@@ -54,8 +54,10 @@
     </div>
 
     <script>
-        // IMPORTANT: Replace this URL with the URL of your admin/customer backend on Render.com
-        const API_BASE_URL = 'https://your-backend-server.onrender.com';
+        // ==================================================================
+        // IMPORTANT: Replace this URL with the URL of your live admin_app.py
+        // ==================================================================
+        const API_BASE_URL = 'https://your-admin-app-url.onrender.com';
 
         // Page Sections
         const authSection = document.getElementById('auth-section');
