--- a/customer_portal.html
+++ b/customer_portal.html
@@ -55,9 +55,9 @@
 
     <script>
         // ==================================================================
-        // IMPORTANT: Replace this URL with the URL of your live admin_app.py
+        //                  API URL IS NOW LIVE
         // ==================================================================
-        const API_BASE_URL = 'https://your-admin-app-url.onrender.com';
+        const API_BASE_URL = 'https://michie-detailing-admin.onrender.com';
 
         // Page Sections
         const authSection = document.getElementById('auth-section');
