--- a/customer_signup.html
+++ b/customer_signup.html
@@ -99,8 +99,10 @@
     </div>
 
     <script>
-        // IMPORTANT: Replace this with the URL of your new customer backend on Render.com
-        const API_BASE_URL = 'https://your-new-customer-backend.onrender.com';
+        // ==================================================================
+        //                  API URL IS NOW LIVE
+        // ==================================================================
+        const API_BASE_URL = 'https://michie-detailing-admin.onrender.com';
 
         const signupForm = document.getElementById('signup-form');
         const passwordInput = document.getElementById('password');
