--- a/customer_signup.html
+++ b/customer_signup.html
@@ -226,6 +226,6 @@
          THE GOOGLE SCRIPT IS NOW THE LAST THING IN THE BODY
          This ensures all of your page's JavaScript is loaded first.
     ================================================================== -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY&libraries=places&callback=initAutocomplete" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAksMo2srFUskoBWk-gIPf-DWYhateR_5Q&libraries=places&callback=initAutocomplete" async defer></script>
 </body>
 </html>
