--- a/customer_signup.html
+++ b/customer_signup.html
@@ -9,7 +9,7 @@
     <!-- ==================================================================
          UPDATED GOOGLE SCRIPT - LOADS THE NEW PLACES ELEMENT LIBRARY
     ================================================================== -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY&libraries=places.element&v=beta" async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAksMo2srFUskoBWk-gIPf-DWYhateR_5Q&libraries=places.element&v=beta" async></script>
 
     <style>
         body { font-family: 'Inter', sans-serif; }
