--- a/customer_signup.html
+++ b/customer_signup.html
@@ -6,7 +6,7 @@
     <title>Create Your Michie Auto Detailing Account</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY&libraries=places.element&v=beta" async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAksMo2srFUskoBWk-gIPf-DWYhateR_5Q&libraries=places.element&v=beta" async></script>
 
     <style>
         body { font-family: 'Inter', sans-serif; }
