--- a/customer_signup.html
+++ b/customer_signup.html
@@ -1,4 +1,3 @@
-666
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -197,6 +196,6 @@
          USING THE CLASSIC, RELIABLE GOOGLE SCRIPT
          This script will call the `initAutocomplete` function once it loads.
     ================================================================== -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAksMo2srFUskoBWk-gIPf-DWYhateR_5Q&libraries=places&callback=initAutocomplete" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY&libraries=places&callback=initAutocomplete" async defer></script>
 </body>
 </html>
