--- a/customer_signup.html
+++ b/customer_signup.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- The new Places API requires its own library -->
-    <script type="module" src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places,core&loading=async"></script>
+    <script type="module" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB133ISKHPtat18iloHDlqm2QHBv133sOk&libraries=places,core&loading=async"></script>
 
     <style>
         body { font-family: 'Inter', sans-serif; }
