--- a/customer_signup.html
+++ b/customer_signup.html
@@ -1,4 +1,4 @@
-UPDATED 9:39PM
+UPDATED 9:43PM 07/06/2025
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -59,9 +59,6 @@ UPDATED 9:39PM
                     <div class="grid grid-cols-1 gap-y-4">
                         <input type="text" id="full-name" placeholder="Full Name" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" autocomplete="name">
                         
-                        <!-- ==================================================================
-                          THE NEW RELIABLE SOLUTION WITH A HIDDEN FLAG
-                        ================================================================== -->
                         <!-- Step 1: Search Box (initially visible) -->
                         <div id="address-search-container">
                             <gmp-place-autocomplete
@@ -78,8 +75,14 @@ UPDATED 9:39PM
                             <button type="button" id="change-address-btn" class="text-sm text-blue-600 hover:underline font-semibold flex-shrink-0">Change</button>
                         </div>
 
-                        <!-- The hidden checkbox that acts as our reliable confirmation flag -->
-                        <input type="checkbox" id="address-confirmed-flag" class="hidden" required>
+                        <!-- 
+                          ==================================================================
+                          THE FIX: The "required" attribute has been removed. The browser
+                          will no longer block form submission because of this hidden element.
+                          Our JavaScript validation will handle it correctly.
+                          ==================================================================
+                        -->
+                        <input type="checkbox" id="address-confirmed-flag" class="hidden">
 
                         <input type="tel" id="phone" placeholder="Phone Number" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" autocomplete="tel">
                         <input type="email" id="email" placeholder="Email Address" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" autocomplete="email">
