--- a/customer_signup.html
+++ b/customer_signup.html
@@ -1,4 +1,3 @@
-UPDATED 9:44PM CST 07/06/2025
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +15,7 @@ UPDATED 9:44PM CST 07/06/2025
         .hidden-section, .hidden { display: none !important; } /* Use !important to ensure it stays hidden */
         .password-requirement { transition: color 0.3s; }
         .valid { color: #16a34a; /* Green */ }
-        .invalid { color: #dc2626; /* Red */ }
+        .invalid { color: #dc2626; /* Red */ }\
         
         /* Styling for the new Place Autocomplete Element */
         gmp-place-autocomplete {
